POR/RefEdge/src/objects/Interview_Question__c.object
<CustomObject>
    <description>Custom Object to add Interview Question(Bound 6)</description>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Questions to be stores for reference interviews</description>
        <inlineHelpText>Questions to be stores for reference interviews</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Interview Question</label>
    <nameField>
        <displayFormat>IQ-{0000}</displayFormat>
        <label>Interview Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>